--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "wrangler dev",
+    "build": "wrangler build",
+    "deploy": "wrangler deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,7 +19,7 @@
     "url": "https://github.com/BenEdridge/shhh/issues"
   },
   "homepage": "https://github.com/BenEdridge/shhh#readme",
-  "dependencies": {
+  "devDependencies": {
     "@cloudflare/wrangler": "^1.11.0"
   }
 }
