--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "wrangler dev",
     "build": "wrangler build",
-    "deploy": "wrangler deploy",
+    "publish": "wrangler publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
