--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shhh",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "cloudflare_worker.js",
   "scripts": {
     "dev": "wrangler dev",
     "build": "wrangler build",
